<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/title_action_product_edit" />

    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/title_action_product_delete" />
</menu>