...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_normal">

        <TextView
            android:id="@+id/tv_row_shopping_list_name"
            style="@style/ListRowHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            app:layout_constraintEnd_toStartOf="@id/tv_row_shopping_list_unchecked_prod"
            app:layout_constraintStart_toStartOf="parent"
...
